<resources>
    <string name="app_name">Indian Blood Donors</string>
    <string name="logo_text">Indian Blood Donors</string>
    <string name="text_slogan"><![CDATA[Donate Blood & Save Life]]></string>
    <string name="created_by">Created By</string>
    <string name="creater_name">Ajay Asija</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="register_blood_donor">Register Blood Donor</string>
    <string name="search_blood_donor">Search Blood Donors</string>
    <string name="about">About</string>
    <string name="contact">Contact Us</string>
    <string name="donate_blood">Donate Blood</string>
    <string name="save_life">Save Life</string>
    <string name="state">State:</string>
    <string name="district">District</string>
    <string name="select_state">Select State</string>
    <string name="select_district">Select District</string>
    <string name="blood_group">Blood Group</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="full_name">Full Name</string>
    <string name="city_name">City Name</string>
    <string name="Date">Date Of Birth</string>
    <string name="mobile_no">Contact Number</string>
    <string name="email_id">Email Id</string>
    <string name="app_title">Blood Bank</string>
    <string name="verify_phone">Verify Your Mobile Number</string>
    <string name="otp">Enter Otp</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="search_donors">Search Donors</string>
    <string name="congratulation_message">Congratulation you are now a Blood Donor. Thank you for your Registeration.</string>
    <string name="name">Name:</string>
    <string name="donor_name">Donor Name</string>
    <string name="city">City:</string>
    <string name="donor_city_name">Donor City Name</string>
    <string name="donor_blood_group">Donor Blood Group</string>
    <string name="donor_contact_no">Donor Contact No</string>
    <string name="soryy_no_record_found">Soryy!! No Record Found</string>
    <string name="about_text">We connect people to the blood  donors all over the country. Here People  can register their details with their blood group and help the people who need that blood group. People can find blood donors in their city, districts or state. Hence your one registration can save a life.</string>
    <string name="adunitsearch">ca-app-pub-8127434234485566/4769311103</string>
    <string name="privacy"><u>If you continue you will \n be agreed to our privacy policy</u></string>
    <string name="rate_us">Rate Us</string>
    <string name="our_other_apps">Our Other Apps</string>


    <!-- String array for Blood Groups-->
    <string-array name="blood_groups">
        <item>A+</item>
        <item>B+</item>
        <item>O+</item>
        <item>A-</item>
        <item>B-</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
</resources>