<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp_thirty">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            app:boxCornerRadiusBottomEnd="@dimen/dp_eighty"
            app:boxCornerRadiusBottomStart="@dimen/dp_eighty"
            app:boxCornerRadiusTopEnd="@dimen/dp_eighty"
            app:boxCornerRadiusTopStart="@dimen/dp_eighty"
            android:hint="@string/select_blood_group"
            android:layout_marginTop="@dimen/dp_thirty"
            app:errorEnabled="true"
            android:id="@+id/bloodGroupSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bloodGroupSelect"
                android:inputType="textAutoComplete"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            app:boxCornerRadiusBottomEnd="@dimen/dp_eighty"
            app:boxCornerRadiusBottomStart="@dimen/dp_eighty"
            app:boxCornerRadiusTopEnd="@dimen/dp_eighty"
            app:boxCornerRadiusTopStart="@dimen/dp_eighty"
            android:hint="@string/select_state"
            android:layout_marginTop="@dimen/dp_ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:id="@+id/stateError">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sppinerStatesSearch"
                android:inputType="textAutoComplete"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            app:boxCornerRadiusBottomEnd="@dimen/dp_eighty"
            app:boxCornerRadiusBottomStart="@dimen/dp_eighty"
            app:boxCornerRadiusTopEnd="@dimen/dp_eighty"
            app:boxCornerRadiusTopStart="@dimen/dp_eighty"
            android:hint="@string/select_district"
            android:layout_marginTop="@dimen/dp_ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:id="@+id/districtSearchError">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerDistrictSearch"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_ten"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxCornerRadiusBottomEnd="@dimen/dp_eighty"
            app:boxCornerRadiusBottomStart="@dimen/dp_eighty"
            app:boxCornerRadiusTopEnd="@dimen/dp_eighty"
            app:boxCornerRadiusTopStart="@dimen/dp_eighty">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                android:hint="@string/city_name"
                app:errorEnabled="true"
                android:id="@+id/cityNameSearch"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_donors"
            android:id="@+id/btnSearch"
            android:layout_marginTop="@dimen/dp_ten"
            android:layout_gravity="center"
            app:cornerRadius="@dimen/dp_sixty"/>

    </LinearLayout>

</ScrollView>